# lk-cpp

./: .gitignore  CMakeLists.txt  ReadMe.MD
example/: ex_affine.cc  ex_equal.cc
include/: affine_estimate.h  common.h  image_process.h
src/: affine_estimate.cc  image_process.cc
